# templated-research-agent

./: .gitignore  001.spec.md  README.md  agrinova_claim_graph_demo.json  agrinova_claim_graph_demo.md  claim_graph_prototype.py  pyproject.toml  pytest.ini  report.md  research_agent_prototype.py  research_agent_schema.json  research_agent_task_example.json  task.json
.cursor/plans/: dossier-live-generation-phase-1b_f2b4f779.plan.md  dossier-schema-phase-1_46e1a486.plan.md  hardening_then_phase_4_synthesis_d9c844b4.plan.md  prioritization_status_and_next_steps_9a89123b.plan.md  questionnaire-execution-layer-plan_090c67ee.plan.md
contracts_lib_example/: README.md
contracts_lib_example/examples/: agrinova_claim_graph.py  build_demo_artifacts.py  dark_theme.txt  questionnaire.agronomy.yaml
docs/: ARCHITECTURE.md  PUBLIC_API.md  REFACTORING.md  TIER1_PIPELINE.md  next_phases.md
docs/tentative/: nudging.v01.md
examples/: agrinova_claim_graph.py  build_demo_artifacts.py  questionnaire.agronomy.yaml
src/research_agent/: __init__.py  (+2 more)
tests/: test_cli_cache_args.py  test_cli_dossier_questionnaire_merge.py  test_cli_output_json.py  test_crop_dossier_validation.py  test_dossier_bridge.py  test_dossier_cli_args.py  test_evaluate_crop_dossier.py  test_evidence_id_stability_with_cache.py  test_import_hygiene.py  test_partials_to_refresh.py  test_prioritization.py  test_questionnaire_cli_args.py  test_questionnaire_coverage.py  test_questionnaire_execution.py  test_questionnaire_research_agent.py  test_retrieval_cache.py  test_sources_cache_integration.py  test_synthesis.py
(+49 files in other folders)
